# otfs_receiver

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md
apps/otfs_rx_offline/: CMakeLists.txt  main.cpp
cmake/: CompilerOptions.cmake
docs/: ARCHITECTURE.md
libs/otfs_core/: CMakeLists.txt
libs/otfs_core/include/otfs/core/: types.hpp  version.hpp
libs/otfs_core/include/otfs/core/cfo/: cfo_corrector.hpp  cfo_estimator.hpp
libs/otfs_core/include/otfs/core/channel/: fid_operator.hpp
libs/otfs_core/include/otfs/core/channel_estimation/: fractional_peak_refiner.hpp  fractional_reference.hpp  frft_local_search.hpp  frft_sic_estimator.hpp  threshold_estimator.hpp
libs/otfs_core/include/otfs/core/dsp/: grid_view.hpp  stage.hpp  workspace.hpp
libs/otfs_core/include/otfs/core/equalization/: cg_lmmse.hpp
libs/otfs_core/include/otfs/core/fft/: fft_direction.hpp  fft_plan.hpp  fft_plan_cache.hpp
libs/otfs_core/include/otfs/core/framing/: frame_extractor.hpp
libs/otfs_core/include/otfs/core/frontend/: dc_remover.hpp  frontend_config.hpp  frontend_metrics.hpp  power_meter.hpp  radio_frontend.hpp  rms_agc.hpp
libs/otfs_core/include/otfs/core/memory/: aligned_buffer.hpp
libs/otfs_core/include/otfs/core/model/: channel.hpp  config.hpp  frame_context.hpp  metrics.hpp  receiver_state.hpp  status.hpp
libs/otfs_core/include/otfs/core/pilot/: pilot_masks.hpp  pilot_observation.hpp
libs/otfs_core/include/otfs/core/pipeline/: pipeline.hpp
libs/otfs_core/include/otfs/core/resampling/: integer_decimator.hpp  sample_rate_config.hpp
libs/otfs_core/include/otfs/core/synchronization/: chirp_synchronizer.hpp  synchronization_pipeline.hpp
libs/otfs_core/include/otfs/core/waveform/: guard_interval.hpp  otfs_waveform.hpp
libs/otfs_core/src/: version.cpp
libs/otfs_core/src/cfo/: cfo_corrector.cpp  cfo_estimator.cpp
libs/otfs_core/src/channel_estimation/: fractional_peak_refiner.cpp  fractional_reference.cpp  frft_local_search.cpp  threshold_estimator.cpp
libs/otfs_core/src/fft/: fft_plan.cpp
libs/otfs_core/src/framing/: frame_extractor.cpp
libs/otfs_core/src/frontend/: dc_remover.cpp  power_meter.cpp  radio_frontend.cpp  rms_agc.cpp
libs/otfs_core/src/pilot/: pilot_masks.cpp  pilot_observation.cpp
libs/otfs_core/src/resampling/: integer_decimator.cpp
libs/otfs_core/src/synchronization/: chirp_synchronizer.cpp  synchronization_pipeline.cpp
libs/otfs_core/src/waveform/: otfs_waveform.cpp
libs/otfs_io/: CMakeLists.txt
libs/otfs_io/include/otfs/io/: binary_array.hpp  iq_format.hpp  reference_data.hpp
libs/otfs_io/src/: binary_array.cpp  iq_format.cpp  reference_data.cpp
tests/: CMakeLists.txt
tests/matlab_reference/: README.md  fractional_reference_README.md  frft_sic_README.md  generate_otfs_reference.m
tests/regression/: fid_matlab_regression_test.cpp  fractional_reference_regression_test.cpp  frft_sic_regression_test.cpp  matlab_reference_test.cpp
tests/unit/: aligned_buffer_test.cpp  cfo_processing_test.cpp  cg_lmmse_test.cpp  chirp_synchronizer_test.cpp  core_smoke_test.cpp  data_model_test.cpp  dsp_infrastructure_test.cpp  fft_plan_test.cpp  fid_operator_test.cpp  fractional_peak_refiner_test.cpp  frame_resampling_test.cpp  frft_local_search_test.cpp  frft_sic_estimator_test.cpp  otfs_waveform_test.cpp  pilot_masks_test.cpp  pilot_observation_test.cpp  radio_frontend_test.cpp  synchronization_pipeline_test.cpp  threshold_estimator_test.cpp
